src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');

body {
  font-family: 'Roboto Mono';
}

html {
  scroll-behavior: smooth;
}

#home {
  position: relative;
  width: 100%;
  height: 100vh;
  top: 15%;
}

#about,
#awards,
#projects {
  /* position: static; */
  padding-top: 8%;
}

.dark-mode {
  background-color: #4e4e4c;
  filter: invert(1) heu-rotate(180deg);
}

.page-border {
  border: 30px solid #f26b38;
  width: 100%;
  height: 100vh;
}

.left-line {
  border-left: 30px solid #f26b38;
  height: 100vh;
  position: fixed;
  left: 0;
  z-index: 1000;
}

.right-line {
  border-right: 30px solid #f26b38;
  height: 100vh;
  position: fixed;
  right: 0;
  z-index: 1000;
}

.top-line {
  border-top: 30px solid #f26b38;
  width: 100vw;
  top: 0;
  z-index: 1000;
  position: sticky;
}

.bottom-line {
  border-bottom: 30px solid #f26b38;
  width: 100vw;
  bottom: 0;
  z-index: 1000;
  position: fixed;
}

.main-container {
  overflow: hidden;
  position: relative;
  width: 75%;
  height: 100%;
  margin: 0 auto;
  max-width: 1060px;
  border: 2px solid magenta;
}

.child-center {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.text-center {
  text-align: center !important;
  font-size: 2rem;
  width: 100%;
}

#header {
  background-color: rgb(255, 255, 255);
  position: fixed;
  height: 80px;
  width: 100%;
  top: 3%;
  right: 0;
  z-index: 100;
}

#nav-bar {
  margin-top: 20px;
}

#nav-bar li {
  display: inline;
  float: right;
  margin-right: 3%;
  list-style-type: none;
}

.nav-link a {
  float: left;
  display: block;
  padding: 8px;
  color: black;
  text-decoration: none !important;
}

li > a:hover {
  color: #f26b38;
}

.about-desc {
  align-self: center;
}

.container {
  padding-top: 2.5%;
  height: 100vh;
  text-align: center;
}

.desc-container {
  padding-top: 2.5%;
  height: 100vh;
  text-align: left;
  margin-inline-start: 30rem;
  margin-inline-end: 30rem;
}

.about-title {
  font-family: 'Roboto Mono';
  font-size: 1rem;
  text-align: right;
  text-underline-position: below;
  padding-left: 18%;
  width: 100%;
  width: max-content;
}

.my-pic {
  /* height: 19vmin; */
  border-radius: 50%;
  float: left;
  margin-left: 18%;
  width: 100px;
  height: 100px;
  /* margin-right: 5%; */
}

.content {
  width: fit-content;
  /* display: inline; */
  /* margin-left: 2%; */
  padding-left: 2%;
  margin-inline-start: 30rem;
  margin-inline-end: 30rem;
}

.about-me {
  font-family: 'Roboto Mono';
  font-size: small;
}

.links {
  padding-top: 3%;
}

.links > a {
  background-color: #f26b38;
  border: none;
  color: white;
  padding: 8px;
  text-align: center;
  text-decoration: none;
  border: 2px solid #fff;
}

.links > a:hover {
  background-color: white;
  color: #f26b38;
  border: 1px solid #f26b38;
}

.new-sec {
  width: 100%;
  position: relative;
  /* display: block; */
}

.clear-float {
  clear: both;
}

.float-right {
  float: right;
  width: fit-content;
}

.float-left {
  float: left;
  width: fit-content;
}

.card-title {
  width: fit-content;
}
.fit {
  margin-left: 30px;
  width: 40%;
  height: fit-content;
}
.card-desc {
  width: 45%;
}

.aboutMe-container {
  position: relative;
  top: 10%;
  height: min-content;
}

.grid-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  grid-template-rows: 70px repeat(2, minmax(0, 1fr)) 70px;
  width: 100%;
}

.about-title-1 {
  grid-row: 1/2;
  grid-column: 1/-2;
  align-self: center;
  margin-left: 2%;
}

.img {
  grid-row: 2 / -1;
  grid-column: 1/3;
  justify-content: center;
}

.my-pic-1 {
  margin-left: 5%;
  border-radius: 50%;
  width: 80%;
  height: 70%;
}
.content-1 {
  grid-row: 2/4;
  grid-column: 3/-1;
  justify-content: center;
  align-content: center;
  line-height: 35px;
}

.button-1 {
  grid-row: 4/-1;
  grid-column: 3/-2;
  align-self: center;
}

.button-1 > a {
  background-color: #f26b38;
  border: none;
  color: white;
  padding: 8px;
  text-align: center;
  text-decoration: none;
  border: 2px solid #fff;
}

.button-1 > a:hover {
  /* margin: 10%; */
  /* align-items: center; */
  background-color: white;
  color: #f26b38;
  border: 1px solid #f26b38;
  /* padding-top: 10%; */
}

.exp-and-edu {
  position: relative;
  top: 5%;
}

.col-2-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 10px;
  position: relative;
  top: 125%;
}

.small-box {
  display: inline;
  border: 1px solid #f26b38;
  color: #f26b38;
  font-family: 'Roboto Mono';
  font-size: small;
}
.education {
  padding-left: 15%;
  font-family: 'Roboto Mono';
  font-weight: bolder;
}

.experience {
  padding-left: 15%;
  font-family: 'Roboto Mono';
  font-weight: bolder;
  border-left: 1px solid #f26b38;
  /* height: 69%; */
}

.experience > h3,
.education > h3,
.about-title-1 > h3,
.projects > h3,
.awards > h3 {
  display: inline;
  font-size: 13px;
  font-family: 'Roboto Mono';
  box-shadow: inset 0 -6px 0px #ede574;
}

.card-title-1 {
  margin-top: 15px;
  margin-bottom: 15px;
  color: #141414;
}

.card-desc-1 {
  margin-bottom: 15%;
  font-size: 13px;
}

.cards-container {
  /* margin-left: 20%; */
  position: relative;
  top: 395%;
  bottom: 0%;
}

.cards-grid {
  display: grid;
  grid-gap: 5%;
  grid-template-columns: repeat(2, 500px);
  height: 250px;
}

.gh-card {
  padding: 10%;
  border: 3px dashed #f26b38;
}

.so-card {
  padding: 5%;
  border: 3px dashed #f26b38;
}

.projects {
  position: relative;
  margin-left: 2%;
  font-family: 'Roboto Mono';
  margin-top: 2%;
}

.projects-container {
  display: grid;
  height: 100vh;
  grid-gap: 2%;
  margin-top: 5%;
  /* width: 75%; */
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  grid-template-rows: repeat(2, 350px);
  /* position: relative; */
  /* top: 150%; */
  /* bottom: 1px; */
}

/* [class*='project-'] {
  width: 350px;
} */
/* ... */

